# project_def_ghostfwl

./: .env.serve  AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile.serve  MODULE_TODO.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
.claude/: MAP.md
configs/: default.toml  kitti_train.toml
docker/: Dockerfile  docker-compose.yml
launch/: def_ghostfwl.launch.py
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2.md  PRD-07-production.md  README.md
repositories/Ghost-FWL/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
repositories/Ghost-FWL/configs/: config_estimate.yaml  config_pretrain.yaml  config_test.yaml  config_train.yaml
repositories/Ghost-FWL/docs/: README_dataset.md
repositories/Ghost-FWL/scripts/: run_estimate.py  run_test.py  run_train.py
repositories/Ghost-FWL/src/config/: __init__.py  config.py  constants.py
repositories/Ghost-FWL/src/models/: FWLMAE.py  FWLMAELoss.py  FWLMAE_pretrain.py  FocalLoss.py  __init__.py
repositories/Ghost-FWL/src/training/: __init__.py  fwl_mae_finetune.py  fwl_mae_finetune_test.py  fwl_mae_pretrain.py
repositories/Ghost-FWL/src/utils/: __init__.py  custom_blosc2.py  factory.py  log.py  representation_voxel.py  test_utils.py  training_utils.py
repositories/Ghost-FWL/src/visualize/: evaluate_pcd.py  evaluate_pcd_batch.py  interactive_histogram_viewer.py  vis_pcd.py  vis_pcd_batch.py  vis_pred.py
repositories/Ghost-FWL/src/visualize/configs/: evaluate_pcd.yaml  evaluate_pcd_batch.yaml  vis_pcd.yaml  vis_pcd_batch.yaml
repositories/Ghost-FWL/src/visualize/fwl_lib/: __init__.py  annotation.py  pointcloud_wrapper.py
scripts/: evaluate.py  export_kitti.py  train_finetune.py  train_kitti.py  train_pretrain.py
src/anima_def_ghostfwl/: __init__.py  serve.py  settings.py
src/anima_def_ghostfwl/api/: __init__.py  app.py  schemas.py  service.py
src/anima_def_ghostfwl/cli/: __init__.py  infer.py
src/anima_def_ghostfwl/data/: __init__.py  io.py  kitti_dataset.py  kitti_voxelize.py  labels.py  preprocess.py
src/anima_def_ghostfwl/eval/: __init__.py  metrics.py  report.py  splits.py
src/anima_def_ghostfwl/export/: __init__.py  exporter.py  model_card.py
src/anima_def_ghostfwl/inference/: __init__.py  checkpoint.py  postprocess.py  sliding_window.py
src/anima_def_ghostfwl/models/: __init__.py  fwl_classifier.py  fwl_mae_pretrain.py  ghost_detector_3d.py  losses.py  patch_embed.py
src/anima_def_ghostfwl/ops/: __init__.py  observability.py  release_gate.py
src/anima_def_ghostfwl/ros2/: __init__.py  bridge.py  messages.py  node.py
src/anima_def_ghostfwl/training/: __init__.py  cli.py
src/anima_shinigami/: __init__.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0104.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0701.md  PRD-0702.md  PRD-0703.md
tests/: test_api.py  test_benchmark_report.py  test_classifier.py  test_cli_infer.py  test_data_io.py  test_export.py  test_fwl_mae.py  test_inference.py  test_losses.py  test_metrics.py  test_postprocess.py  test_preprocess.py  test_release_gate.py  test_ros2_contract.py  test_serve.py  test_service.py  test_settings.py  test_splits.py  test_training_config.py
