[project]
name = "Ghost-FWL"
version = "0.1.0"
description = "The official implementation of Ghost-FWL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "blosc2>=3.7.0",
  "open3d>=0.19.0",
  "opencv-python",
  "pip>=25.1.1",
  "polars>=1.29.0",
  "prompt-toolkit>=3.0.51",
  "pyqt5>=5.15.11",
  "pytorch3dunet",
  "scikit-image>=0.25.2",
  "small-gicp>=1.0.0",
  "timm>=1.0.19",
  "torch>=2.5.1",
  "torchinfo>=1.8.0",
  "ultralytics-thop>=2.0.18",
  "wandb>=0.19.11"
]

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
  "ruff>=0.11.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
torch = [
  {index = "pytorch-cpu", marker = "sys_platform != 'linux'"},
  {index = "pytorch-cu121", marker = "sys_platform == 'linux'"}
]
pytorch3dunet = {git = "https://github.com/wolny/pytorch-3dunet.git"}

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# ##################################################################
# Ruff
# ##################################################################
[tool.ruff]
line-length = 100
exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  "src/visualize/fwl_lib/"
]

[tool.ruff.lint]
preview = true
select = [
  "ANN",  # type annotation
  "I"  # isort
]
ignore = [
  "ANN401",  # Checks that function arguments are annotated with a more specific type than Any.
  "B007",  # Unused loop variable
  "B008"  # Function call in default argument
]
unfixable = [
  "F401",  # unused import
  "F841"  # unused variable
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
